clusters/casa/apps/glitchtip/manifests/web.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glitchtip
  namespace: glitchtip
spec:
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: glitchtip
  template:
    metadata:
      labels:
        app: glitchtip
    spec:
      containers:
        - name: glitchtip
          image: "glitchtip/glitchtip:6@sha256:a3d8eb1b36c1e1603d55ab32711ea3dd8115874742a781a57391a62a16e0dff6"
          ports:
            - containerPort: 8000
              name: http
          startupProbe:
            exec:
              command: ["python", "/code/healthcheck.py"]
            initialDelaySeconds: 15
            periodSeconds: 5
            failureThreshold: 24
          livenessProbe:
            exec:
              command: ["python", "/code/healthcheck.py"]
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
          readinessProbe:
            exec:
              command: ["python", "/code/healthcheck.py"]
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
          securityContext:
            runAsUser: 5000
            runAsGroup: 5000
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 768Mi
