clusters/casa/apps/glitchtip/manifests/worker.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glitchtip-worker
  namespace: glitchtip
spec:
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: glitchtip-worker
  template:
    metadata:
      labels:
        app: glitchtip-worker
    spec:
      containers:
        - name: glitchtip-worker
          image: "glitchtip/glitchtip:6@sha256:a3d8eb1b36c1e1603d55ab32711ea3dd8115874742a781a57391a62a16e0dff6"
          startupProbe:
            exec:
              command: ["sh", "-c", "grep -q runworker /proc/[0-9]*/cmdline"]
            initialDelaySeconds: 15
            periodSeconds: 5
            failureThreshold: 12
          livenessProbe:
            exec:
              command: ["sh", "-c", "grep -q runworker /proc/[0-9]*/cmdline"]
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
          readinessProbe:
            exec:
              command: ["sh", "-c", "grep -q runworker /proc/[0-9]*/cmdline"]
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
          securityContext:
            runAsUser: 5000
            runAsGroup: 5000
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              cpu: 300m
              memory: 512Mi
